[package]
name = "xsu-util"
version = "0.1.1"
edition = "2021"
authors = ["trisuaso", "swmff"]
description = "Basic utilities"
homepage = "https://swmff.org"
repository = "https://github.com/hkauso/xsu"
license = "MIT"

[dependencies]
ammonia = "4.0.0"
hex_fmt = "0.3.0"
pulldown-cmark = "0.11.0"
serde = { version = "1.0.204", features = ["derive"] }
sha2 = "0.10.8"
uuid = { version = "1.10.0", features = ["v4"] }

[lib]
doctest = false
